# PixelVault

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  catalogo.json  gerenciador_assets.ipynb  install.bat  pyproject.toml
.github/workflows/: ci.yml
scripts/: gerenciador.py  gerenciador_bigquery.py
sprints/: SPRINT_S23_HIGIENIZACAO.md
tests/: test_gerenciador.py
