[project]
name = "pixelvault"
version = "2.0.0"
description = "Gerenciador de assets visuais para paineis analiticos"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
    { name = "Andre Farias", email = "andre.dsbf@gmail.com" },
]
dependencies = [
    "unidecode>=1.3.0",
    "requests>=2.28.0",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.urls]
Repository = "https://github.com/AndreBFarias/PixelVault"
Issues = "https://github.com/AndreBFarias/PixelVault/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scripts*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
